--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
       <li>Pour batter into the cake pan and bake for 30-35 minutes.</li>
       <li>Let cool before serving. Enjoy!</li>
     </ol>
+    <button id="highlightbtn" class="button-1" type="button">Highlight</button>
+    <button id="checkbtn" class="button-2" type="button">Check</button>
+    <button id="resetbtn" class="button-3" type="button">Reset</button>
   </div>
 </body>
 
